feat: Extended API by Raw Data
